--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^3.1.2",
     "rxjs": "~6.2.0",
